# bettermarkdown

./: .impeccable.md  .prettierignore  LICENSE  PLAN.md  README.md  eslint.config.js  index.html  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: ci.yml.disabled  release.yml
docs/: FEATURE-AUDIT.md  RELEASING.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  watcher.rs
src-tauri/src/commands/: fs.rs
src/components/: CommandPalette.tsx  EmptyState.tsx  ExternalChangeBar.tsx  FormatSidebar.tsx  SettingsDialog.tsx  StatusBar.tsx  Toolbar.tsx  UnsavedChangesDialog.tsx
src/components/ui/: button.tsx  dialog.tsx  popover.tsx  sonner.tsx
src/editor/: Editor.test.ts  Editor.tsx  extensions.ts  metrics.ts  theme.ts
src/editor/livePreview/: commands.ts  decorate.ts  index.ts  livePreview.test.ts  reveal.ts  widgets.ts
src/lib/: commands.ts  export.test.ts  export.ts  files.ts  shortcuts.ts  updates.ts
src/store/: file.ts  settings.ts
src/styles/: globals.css
